2008-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Deal with ReadImage() returning
	a NULL pointer when reading JPEG sub-image.

2008-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (ExportImageChannel): Added progress monitor
	support.
	(SetImageChannelDepth): Added progress monitor support.
	(ChannelImage): Don't preserve matte channel when extracting
	channel.
	* magick/image.c (SetImageOpacity): Avoid integer overflow in Q32
	build.  Added progress monitor support.
	(SyncImage): Added progress monitor support.
	(SetImage): Added progress monitor support.
	(CycleColormapImage): Added progress monitor support.
	(GetImageBoundingBox): Added progress monitor support.
	(SortColormapByIntensity): Added progress monitor support.

2008-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, magick/Makefile.am: Don't use libtdl unless we are
	supposed to be using it!
	* libtool: Updated to GNU libtool 1.2960 2008-04-19.
	* configure.ac, magick/delegate.h: It seems that the modern
	convention is to store ghostscript headers in a subdirectory
	called 'ghostscript' rather than 'ps'.
	We don't actually need Ghostscript errors.h and that is a good
	thing since it seems that some newer Ghostscript calls it ierrors.h

2008-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/files-dlls.isx: Comment out inclusion
	of X11 support DLLs.
	* VisualMagick/magick/magick_config.h.in: X11 is no longer in the
	default Windows build.

2008-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c: Eliminate various annoying warnings noticed
	under MinGW.
	* magick/spinlock.h (_spinlock_release): Use 'long' rather than
	'int' in order to eliminate warning under MinGW.
	* magick/semaphore.c (spinlock_wait): Use 'long' rather than 'int'
	in order to eliminate warning under MinGW.
	* magick/log.c (LogMagickEventList): Eliminate warning under MinGW.