@@ -24,6 +24,7 @@
 2008-04-22  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> libtool: Update to 1.2965 2008-04-22
   <LI> coders/png.c (ReadOneJNGImage): Deal with ReadImage() returning
         a NULL pointer when reading JPEG sub-image.
 
